--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+$gradient-cl-cream: linear-gradient(to right, #f9e9d1, #f9e9d1, #f9e9d1);
 
 @font-face {
   font-family: "Google Sans";
@@ -28,8 +29,21 @@
   font-display: swap;
 }
 
+.text-gradient-cream {
+  background-clip: text;
+  background-clip: text;
+  background-image: $gradient-cl-cream;
+  color: #f9e9d1;
+}
+
+* {
+  body {
+    background: red !important;
+  }
+}
+
 body {
-  @apply bg-gray-900 text-white overflow-x-hidden;
+  @apply text-gradient-cream overflow-x-hidden;
   cursor: none;
 }
 
@@ -86,6 +100,13 @@ a {
   &.menu-visible {
     .hamburger {
       > div {
+        background: linear-gradient(
+          to right,
+          #fb2039,
+          #fb2056,
+          #fb2039
+        ) !important;
+
         transform: rotate(135deg);
         &:before {
           top: 0;
@@ -171,11 +192,11 @@ a {
             background: linear-gradient(
               90deg,
               #ffffff 0%,
-              #ffffff 50%,
-              #6dd5ed 51%,
-              #2193b0 100%
+              #fb2039 98%,
+              #fb2056 99%,
+              #fb2039 100%
             );
-            background-size: 200% 100%;
+            background-size: 800% 100%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
 
@@ -203,7 +224,8 @@ a {
 }
 
 .text-gradient {
-  background: linear-gradient(90deg, #6dd5ed 0%, #2193b0 100%);
+  background: linear-gradient(to right, #fb2039, #fb2056, #fb2039) !important;
+
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -212,9 +234,9 @@ a {
   background: linear-gradient(
     90deg,
     #ffffff 0%,
-    #ffffff 50%,
-    #6dd5ed 51%,
-    #2193b0 100%
+    #fb2039 50%,
+    #fb2056 51%,
+    #fb2039 100%
   );
   background-size: 200% 100%;
   -webkit-background-clip: text;
